--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -3,7 +3,6 @@
 			<table class='table'>
       			<tr>
       	    	<%= attachment_image_tag user, :profile_image, size: "100x100", format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
-
       			</tr>
       			<tr>
     	  			<th>name</th>
@@ -13,7 +12,25 @@
     	  			<th>introduction</th>
     	  			<th><%= user.introduction %></th>
       			</tr>
+            <tr>
+              <th>follows</th>
+              <th><%= link_to user.follows.count, follows_user_path(user) %></th>
+            </tr>
+            <tr>
+              <th>followers</th>
+              <th><%= link_to user.followers.count, followers_user_path(user) %></th>
+            </tr>
 			</table>
+
+      <div class="row">
+        <% if user != current_user %>
+          <% if user.followed_by?(current_user) %>
+            <%= link_to "フォロー解除", user_relationships_path(user_id: user.id), method: :delete, class: "btn btn-danger btn-block" %>
+          <% else %>
+            <%= link_to "フォローする", user_relationships_path(user_id: user.id), method: :post, class: "btn btn-primary btn-block" %>
+          <% end %>
+        <% end %>
+      </div>
 
 			<div class='row'>
    					<p><%= link_to "", edit_user_path(user), class: "col-lg-12 btn btn-default glyphicon glyphicon-wrench" %></p>
