--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,6 @@
      <table class='table table-hover table-inverse'>
         <thead>
           <tr>
-            <th></th>
             <th>image</th>
             <th>name</th>
             <th colspan="3"></th>
@@ -23,6 +22,19 @@
             <%= attachment_image_tag user, :profile_image, size: "40x40", fallback:"no_image.jpg", class: "pull-left profile-thumb" %>
           </td>
           <td><%= user.name %></td>
+
+          <td>follows :<%= link_to user.follows.count, follows_user_path(user) %></td>
+          <td>followers :<%= link_to user.followers.count, followers_user_path(user) %></td>
+
+          <td>
+            <% if user != current_user %>
+              <% if user.followed_by?(current_user) %>
+                <%= link_to "フォロー解除", user_relationships_path(user_id: user.id), method: :delete, class: "btn btn-sm btn-danger" %>
+              <% else %>
+                <%= link_to "フォローする", user_relationships_path(user_id: user.id), method: :post, class: "btn btn-sm btn-primary" %>
+              <% end %>
+            <% end %>
+          </td>
           <td><%= link_to "Show", user_path(user.id) %></td>
         </tr>
         <% end %>
